package xyz.dgz48.tasks.webapi.task;

public enum Priority {
  HIGH,
  MEDIUM,
  LOW
}
