package xyz.dgz48.tasks.webapi.task;

public enum TaskStatus {
  NOT_STARTED,
  IN_PROGRESS,
  DONE,
  ON_HOLD
}
