package xyz.dgz48.tasks.webapi.task.domain;

public enum Visibility {
  TENANT,
  STAKEHOLDERS,
  PRIVATE
}
